--- a/_includes/hero/hero-one.html
+++ b/_includes/hero/hero-one.html
@@ -5,6 +5,7 @@
         <div class="row">
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                 <div class="hero-wrapper">
+                    {{ site.data.company.name }} test
                     <h1>{{ site.data.hero.title }}</h1>
                     <p>{{ site.data.hero.subtitle }}</p>
                     <a href="{{ hero.button.link }}" class="l-btn cmk-button cmk-rotate-right">{{ hero.button.label
