--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5159,3 +5159,8 @@ ul.works-menu li button {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+:root {
+  --primary-color: #F2B266;
+  --primary-font: Fraunces
+}
