--- a/_includes/hero/hero-one.html
+++ b/_includes/hero/hero-one.html
@@ -1,21 +1,22 @@
 {% assign hero = site.data.hero['hero_one'] %}
+
 <div class="hero-area height-800 bg-property d-flex align-items-center" data-overlay="{{ hero.overlay_color }}"
-    data-opacity="{{ hero.opacity }}" data-background="{{ hero.image1 | relative_url }}">
+    data-opacity="{{ hero.opacity }}" data-background="{{ site.data.hero.background_image | relative_url }}">
     <div class="container custom-container-1">
         <div class="row">
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                 <div class="hero-wrapper">
-                    {{ site.data.company.name }} test
-                    <h1>{{ site.data.hero.title }}</h1>
+                    <h1 class='hero-title'>Epic <span class="hero-title-highlight">Landscape Designs</span></h1>
                     <p>{{ site.data.hero.subtitle }}</p>
-                    <a href="{{ hero.button.link }}" class="l-btn cmk-button cmk-rotate-right">{{ hero.button.label
+                    <a href="{{ site.data.hero.button_link }}" class="hero-btn l-btn cmk-button cmk-rotate-right">{{
+                        site.data.hero.button_text
                         }}</a>
                 </div>
             </div>
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                 <div class="hero-popup-content">
-                    <img src="{{ hero.image2 | relative_url }}" alt="{{ hero.alt }}">
-                    <a class="play-btn pulse-effect popup-video" href="{{ hero.videolink }}"><i
+                    <img src="{{ site.data.hero.thumbnail_image | relative_url }}" alt="{{ hero.alt }}">
+                    <a class="play-btn pulse-effect popup-video" href="{{ site.data.hero.video_link }}"><i
                             class="fas fa-play"></i></a>
                 </div>
             </div>
