--- a/_includes/about/about-four.html
+++ b/_includes/about/about-four.html
@@ -1,16 +1,14 @@
-{% assign about_four = site.data.about['about_four'] %}
 <div class="about-block pt-110 pb-110">
     <div class="container custom-container-1">
         <div class="row">
             <div class="col-xl-7 col-lg-7 col-md-7 wow fadeInUp" data-wow-delay=".3s">
-                <h2>{{ about_four.column1.heading }}</h2>
-                <p>{{ about_four.column1.description }}</p>
-                <a href="{{ about_four.column1.button.url | relative_url }}" class="l-btn cmk-button cmk-rotate-right mt-20">{{ about_four.column1.button.label }}</a>
+                <h2>{{ site.data.about.heading }}</h2>
+                <p>{{ site.data.about.description }}</p>
             </div>
             <div class="col-xl-5 col-lg-5 col-md-5 wow fadeInUp" data-wow-delay=".6s">
                 <div class="hero-popup-content">
-                    <img src="{{ about_four.column2.image | relative_url }}" alt="{{ about_four.column2.alt }}">
-                    <a class="play-btn pulse-effect popup-video" href="{{ about_four.column2.video_url }}"><i class="fas fa-play"></i></a>
+                    <img src="{{ site.data.about.image | relative_url }}" alt="{{ site.data.about.image_alt }}">
+
                 </div>
             </div>
         </div>
