--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ "Landi - Landscape Gardening Jekyll Theme" }}{% endif %}
-    </title>
+    <title> {{ site.data.company.name }} </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
