added netlify form

--- a/_includes/appointment/appointment-one.html
+++ b/_includes/appointment/appointment-one.html
@@ -12,7 +12,7 @@
                         <span>We'd love to help you create the epic landscape of your dreams. </span>
                         <h2>Email For A Free Consultation & Quote Today </h2>
                     </div>
-                    <form action="{{ form.query_form }}" method="POST">
+                    <form netlify action="{{ form.query_form }}" method="POST">
                         <div class="row">
                             <div class="col-xl-6">
                                 <input id="name" name="name" type="text" placeholder="Name">
