--- a/_includes/appointment/appointment-one.html
+++ b/_includes/appointment/appointment-one.html
@@ -1,6 +1,6 @@
 {% assign appointment_one = site.data.appointment['appointment_one'] %}
 {% assign form = site.data.form['form'] %}
-<div class="book-appointment">
+<div class="book-appointment" id='contact'>
     <div class="book-appointment-img bg-property"
         data-background="https://epiclandscapedesigns.com.au/assets/images/image03.jpg?v=86c80013">
     </div>
