--- a/_includes/work/how-it-work-one.html
+++ b/_includes/work/how-it-work-one.html
@@ -1,4 +1,4 @@
-<div class="how-it-works theme-bg-4 pt-110 pb-110">
+<div class="how-it-works theme-bg-4 pt-110 pb-110" id='services'>
     <div class="container custom-container-1">
         <div class="row">
             <div class="section-title text-center mb-70 wow fadeInUp" data-wow-delay=".3s">
@@ -11,30 +11,35 @@
             <!-- Tabs Navigation Start -->
             <ul class="works-menu text-center mb-50 wow fadeInUp" role="tablist" data-wow-delay=".3s">
                 <li class="nav-item">
-                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
+                        type="button" role="tab" aria-controls="home" aria-selected="true">
                         <span class="works-icon">
-                            <img src="{{ "assets/images/how-it-works/preparation-phase.png" | relative_url }}" alt="">
+                            <img src="{{ " assets/images/how-it-works/preparation-phase.png" | relative_url }}" alt="">
                         </span>
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
+                        type="button" role="tab" aria-controls="profile" aria-selected="false">
                         <span class="works-icon">
-                            <img src="{{ "assets/images/how-it-works/design-proposal.png" | relative_url }}" alt="">
+                            <img src="{{ " assets/images/how-it-works/design-proposal.png" | relative_url }}" alt="">
                         </span>
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false">
+                    <button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages"
+                        type="button" role="tab" aria-controls="messages" aria-selected="false">
                         <span class="works-icon">
-                            <img src="{{ "assets/images/how-it-works/start-planting.png" | relative_url }}" alt="">
+                            <img src="{{ " assets/images/how-it-works/start-planting.png" | relative_url }}" alt="">
                         </span>
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
+                    <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings"
+                        type="button" role="tab" aria-controls="settings" aria-selected="false">
                         <span class="works-icon">
-                            <img src="{{ "assets/images/how-it-works/enjoy-the-landscape.png" | relative_url }}" alt="">
+                            <img src="{{ " assets/images/how-it-works/enjoy-the-landscape.png" | relative_url }}"
+                                alt="">
                         </span>
                     </button>
                 </li>
@@ -49,7 +54,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".3s">
                                 <h3>Preparation Phase</h3>
                                 <div class="works-img bg-hover-style-1 bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -58,7 +63,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".5s">
                                 <h3>Design Proposal</h3>
                                 <div class="works-img bg-hover-style-1 bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -67,7 +72,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".7s">
                                 <h3>Start Planting</h3>
                                 <div class="works-img bg-hover-style-1 bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -76,7 +81,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".9s">
                                 <h3>Enjoy the Landscape</h3>
                                 <div class="works-img bg-hover-style-1 bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -89,7 +94,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".3s">
                                 <h3>Design Proposal</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -98,7 +103,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".5s">
                                 <h3>Preparation Phase</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -107,7 +112,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".7s">
                                 <h3>Enjoy the Landscape</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -116,7 +121,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".9s">
                                 <h3>Start Planting</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -129,7 +134,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".3s">
                                 <h3>Enjoy the Landscape</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -138,7 +143,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".5s">
                                 <h3>Design Proposal</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -147,7 +152,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".7s">
                                 <h3>Preparation Phase</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -156,7 +161,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".9s">
                                 <h3>Start Planting</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -169,7 +174,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".3s">
                                 <h3>Enjoy the Landscape</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/4.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -178,7 +183,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".5s">
                                 <h3>Start Planting</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/3.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -187,7 +192,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".7s">
                                 <h3>Design Proposal</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/2.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
@@ -196,7 +201,7 @@
                             <div class="works-content-wrapper text-center wow fadeInUp" data-wow-delay=".9s">
                                 <h3>Preparation Phase</h3>
                                 <div class="works-img bg-hover-style-1">
-                                    <img src="{{ "assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
+                                    <img src="{{ " assets/images/how-it-works/1.jpg" | relative_url }}" alt="">
                                     <a href="#" class="works-link"><i class="fas fa-plus"></i></a>
                                 </div>
                             </div>
