--- a/_includes/about/about-four.html
+++ b/_includes/about/about-four.html
@@ -1,4 +1,4 @@
-<div class="about-block pt-110 pb-110">
+<div class="about-block pt-110 pb-110" id='about'>
     <div class="container custom-container-1">
         <div class="row">
             <div class="col-xl-7 col-lg-7 col-md-7 wow fadeInUp" data-wow-delay=".3s">
