--- a/_includes/testimonial/testimonial-one.html
+++ b/_includes/testimonial/testimonial-one.html
@@ -1,4 +1,5 @@
 {% assign testimonial_one = site.data.testimonial['testimonial_one'] %}
+{% assign reviews = site.data.reviews.reviews %}
 <div class="testimonial-area theme-bg-4 pt-280 pb-110">
     <div class="container custom-container-1">
         <div class="row">
@@ -11,97 +12,22 @@
         </div>
         <div class="row">
             <div class="testimonial-style-1">
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial1.photo | reletive_url }}" alt="{{ testimonial_one.testimonial1.alt }}">
-                    <h3>{{ testimonial_one.testimonial1.name }}</h3>
-                    <span>{{ testimonial_one.testimonial1.position }}</span>
-                    <p>{{ testimonial_one.testimonial1.comment }}</p>
+                {% for review in reviews %}
+                <div class="single-testimonial wow fadeInUp" data-wow-delay=".{{ forloop.index | times: 2 }}s">
+                    <div class="reviewer-info">
+                        <h3><a target="_blank" href="{{ review.profile_url }}">{{ review.name }}</a></h3>
+                    </div>
+                    <p>{{ review.comment }}</p>
                     <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        {% for i in (1..5) %}
+                        {% if i <= review.rating %} <i class="fas fa-star"></i>
+                            {% else %}
+                            <i class="far fa-star"></i>
+                            {% endif %}
+                            {% endfor %}
                     </div>
                 </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial2.photo | reletive_url }}" alt="{{ testimonial_one.testimonial2.alt }}">
-                    <h3>{{ testimonial_one.testimonial2.name }}</h3>
-                    <span>{{ testimonial_one.testimonial2.position }}</span>
-                    <p>{{ testimonial_one.testimonial2.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial3.photo | reletive_url }}" alt="{{ testimonial_one.testimonial3.alt }}">
-                    <h3>{{ testimonial_one.testimonial3.name }}</h3>
-                    <span>{{ testimonial_one.testimonial3.position }}</span>
-                    <p>{{ testimonial_one.testimonial3.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial4.photo | reletive_url }}" alt="{{ testimonial_one.testimonial4.alt }}">
-                    <h3>{{ testimonial_one.testimonial4.name }}</h3>
-                    <span>{{ testimonial_one.testimonial4.position }}</span>
-                    <p>{{ testimonial_one.testimonial4.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial5.photo | reletive_url }}" alt="{{ testimonial_one.testimonial5.alt }}">
-                    <h3>{{ testimonial_one.testimonial5.name }}</h3>
-                    <span>{{ testimonial_one.testimonial5.position }}</span>
-                    <p>{{ testimonial_one.testimonial5.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial6.photo | reletive_url }}" alt="{{ testimonial_one.testimonial6.alt }}">
-                    <h3>{{ testimonial_one.testimonial6.name }}</h3>
-                    <span>{{ testimonial_one.testimonial6.position }}</span>
-                    <p>{{ testimonial_one.testimonial6.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="single-testimonial wow fadeInUp" data-wow-delay=".3s">
-                    <img src="{{ testimonial_one.testimonial7.photo | reletive_url }}" alt="{{ testimonial_one.testimonial7.alt }}">
-                    <h3>{{ testimonial_one.testimonial7.name }}</h3>
-                    <span>{{ testimonial_one.testimonial7.position }}</span>
-                    <p>{{ testimonial_one.testimonial7.comment }}</p>
-                    <div class="star-rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
