--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,3 +44,29 @@ color: var(--primary-color);
 .section-title span {
     font-size: inherit;
 }
+
+.footer-info a {
+   font-size: 16px;
+}
+
+.two-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 767px) {
+    .two-col {
+        grid-template-columns: 1fr;
+    }
+}
+
+.reviewer-info h3 a {
+    color: #333;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.reviewer-info h3 a:hover {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
