--- a/_includes/project/project-one.html
+++ b/_includes/project/project-one.html
@@ -1,5 +1,5 @@
 {% assign project_one = site.data.project['project_one'] %}
-<div class="project-area pt-110 pb-110">
+<div id='projects' class="project-area pt-110 pb-110">
     <div class="container custom-container-1">
         <div class="row">
             <div class="col-xl-12">
