--- a/_includes/common/logo.html
+++ b/_includes/common/logo.html
@@ -1,5 +1,6 @@
-<svg width="420" height="35" viewBox="0 0 420 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg class="site-logo" width="100%" height="100%" viewBox="0 0 420 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+    preserveAspectRatio="xMidYMid meet">
     <text x="20" y="28" font-family="Fraunces, serif" font-size="28" fill="#6B6967" font-weight="400">Epic</text>
-    <text x="80" y="28" font-family="Fraunces, serif" font-size="28" fill="#F2B266" font-style="italic">Landscape</text>
-    <text x="207" y="28" font-family="Fraunces, serif" font-size="28" fill="#F2B266" font-style="italic">Designs</text>
+    <text x="83" y="28" font-family="Fraunces, serif" font-size="28" fill="#F2B266" font-style="italic">Landscape</text>
+    <text x="218" y="28" font-family="Fraunces, serif" font-size="28" fill="#F2B266" font-style="italic">Designs</text>
 </svg>
