--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link
+        href="https://fonts.googleapis.com/css2?display=swap&family=Fraunces:ital,wght@0,300;0,400;1,300;1,400&family=Inter:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700"
+        rel="stylesheet" type="text/css" />
+
     {% seo %}
 
     <link rel="shortcut icon" type="image/x-icon" href={{"assets/images/favicon.png" | relative_url}}>
