--- a/assets/scss/utils/_typography.scss
+++ b/assets/scss/utils/_typography.scss
@@ -1,5 +1,5 @@
 // font url
-$font-url: 'https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap';
+$font-url: 'https://fonts.googleapis.com/css2?display=swap&family=Fraunces:ital,wght@0,300;0,400;1,300;1,400&family=Inter:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700';
 
 // font family
 $font-family: (
